2002-06-15  Bruno Haible  <bruno@clisp.org>

	* javacomp.m4 (gt_JAVACOMP): Ignore gcj versions that start with
	"3.0" or "3.1". (gcj 3.0.4 compiles GetURL.java to invalid bytecode,
	that crashes with an IllegalAccessError when executed by gij 3.0.4 or
	with a VerifyError when executed by Sun Java. Likewise for gcj 3.1.)

2002-06-14  Bruno Haible  <bruno@clisp.org>

	* lib-link.m4 (AC_LIB_RPATH): New option --disable-rpath.
	(AC_LIB_LINKFLAGS_BODY): Don't hardcode library paths if
	--disable-rpath was given.

2002-06-12  Bruno Haible  <bruno@clisp.org>

	* lcmessage.m4 (AM_LC_MESSAGES): Don't test ac_cv_header_locale_h here.
	* gettext.m4 (AM_INTL_SUBDIR): Test it here.

2002-06-07  Bruno Haible  <bruno@clisp.org>

	* intdiv0.m4: New file.
	* gettext.m4 (AM_INTL_SUBDIR): Require gt_INTDIV0.
	* Makefile.am (aclocal_DATA): Add intdiv0.m4.
	(EXTRA_DIST): Add intdiv0.m4.

2002-05-18  Bruno Haible  <bruno@clisp.org>

	Make it possible to invoke AM_ICONV after AM_GNU_GETTEXT.
	* iconv.m4 (AM_ICONV_LINKFLAGS_BODY): New macro.
	(AM_ICONV_LINK): Require it.
	(AM_ICONV): Invoke AM_ICONV_LINK. Requiring it is not sufficient,
	because gettext.m4 invokes it inside an 'if'.
	* gettext.m4 (AM_GNU_GETTEXT): Require AM_ICONV_LINKFLAGS_BODY.

2002-05-04  Bruno Haible  <bruno@clisp.org>

	* javacomp.m4 (gt_JAVACOMP): Ignore non-digits in the first line of
	the output of "gcj --version". Needed for gcj 3.1.

2002-04-30  Bruno Haible  <bruno@clisp.org>

	* stdbool.m4 (gt_STDBOOL_H): If <stdbool.h> does not exist, check for
	_Bool as a builtin primitive type. Needed for cc on OSF/1 5.1.

2002-04-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.2 released.

2002-04-08  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): Don't use _nl_domain_bindings; its
	linkage name has changed between gettext 0.10.35 and 0.10.36.
	Reported by Albert Chin-A-Young <china@thewrittenword.com>.

	* lib-link.m4 (AC_LIB_LINKFLAGS_BODY): Handle -R options that appear