@@ -1,3 +1,7 @@
+2002-07-14  Bruno Haible  <bruno@clisp.org>
+
+	* libtool.m4 (_LT_AC_LTCONFIG_HACK): Add support for GNU/FreeBSD.
+
 2002-06-15  Bruno Haible  <bruno@clisp.org>
 
 	* javacomp.m4 (gt_JAVACOMP): Ignore gcj versions that start with
